unpackaged/main/default/objects/Contact/fields/Handover_Notes_200__c.field-meta.xml
<CustomField>
    <fullName>Handover_Notes_200__c</fullName>
    <label>Handover Notes 200</label>
    <length>200</length>
    <type>Text</type>
</CustomField>