unpackaged/main/default/objects/Contact/fields/textbox__c.field-meta.xml
<CustomField>
    <fullName>textbox__c</fullName>
    <label>textbox</label>
    <length>100</length>
    <type>Text</type>
</CustomField>